[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/arvore7.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Arvore7.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 0.01

[node name="Arvore7" type="Area2D"]
position = Vector2( 508, 207 )
collision_layer = 16
script = ExtResource( 2 )

[node name="Alcance" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.629944 )
texture = ExtResource( 1 )

[node name="AtaqueTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_exited" from="." to="." method="_on_Arvore7_area_exited"]
[connection signal="timeout" from="AtaqueTimer" to="." method="_on_AtaqueTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
